[metadata]
name = ###
version = attr: mypackage._version.__version__
author = Adam Rumpf
author_email = arumpf@floridapoly.edu
description = ###
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = ###
project_urls =
    Source = ###
    Bug Tracker = ###
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha ### Alternatives include "4 - Beta" and "5 - Production/Stable"
    ### See <https://pypi.org/classifiers/> for other classifiers, like "Intended Audience" and "Topic"
    Natural Language :: English
keywords =
    ###

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires =
    >= 3.6 ###
install_requires =
    python_version >= 3.6 ###
    ### List of package dependencies to be enforced when someone tries to install this package
setup_requires =
    ### List of package dependencies to be enforced when this package is built
    setuptools >= 51 ###

[options.packages.find]
where = src
