[metadata]
name = tex-untag
version = attr: tex_untag._version.__version__
author = Adam Rumpf
author_email = arumpf@floridapoly.edu
description = A script for removing all of a given markup tag from a set of TeX files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/adam-rumpf/tex-untag
project_urls =
    Source = https://github.com/adam-rumpf/tex-untag
    Bug Tracker = https://github.com/adam-rumpf/tex-untag/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Text Processing :: Markup :: LaTeX
    Natural Language :: English
keywords =
    latex
    text processing
    text editing

[options]
package_dir =
    = src
packages = find:
setup_requires =
    setuptools >= 51

[options.packages.find]
where = src
