[metadata]
name = tex-untag
version = attr: tex_untag._version.__version__
author = attr: tex_untag._version.__author__
author_email = attr: tex_untag._version._author_email
description = A script for removing all of a given markup tag from a set of TeX files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/adam-rumpf/tex-untag
project_urls =
    Source = https://github.com/adam-rumpf/tex-untag
    Bug Tracker = https://github.com/adam-rumpf/tex-untag/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Text Processing :: Markup :: LaTeX
    Natural Language :: English
keywords =
    latex
    text processing
    text editing

[options]
package_dir =
    = src
packages = find:
python_requires =
    >= 3.8
setup_requires =
    setuptools >= 51

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tex-untag = tex_untag:main
